<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/concatenateMatchData"
        android:onClick="concatenateMatchData"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/concatenatePitData"
        android:onClick="concatenatePitData"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/sendRobotPhotos"
        android:onClick="sendRobotPhotos"/>

    <Button
        android:id="@+id/send_pit_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendPitData"
        android:onClick="sendPitData"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendConcatMatchData"
        android:onClick="sendConcatMatchData"/>
    <Button
        android:id="@+id/send_concat_pit_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendConcatPitData"
        android:onClick="sendConcatPitData"/>

</LinearLayout>