<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">


            <TextView
                android:id="@+id/endGameHabitatLevelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/endGameHabitatLevelHeading" />

            <RadioGroup
                android:id="@+id/endGameHabitatLevelRadioQuestion"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/habOneEndGame_Radiobtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_drawable"
                    android:button="@null"
                    android:text="@string/habOneEndGame" />

                <RadioButton
                    android:id="@+id/habTwoEndGame_Radiobtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_drawable"
                    android:button="@null"
                    android:text="@string/habTwoEndGame" />


                <RadioButton
                    android:id="@+id/habThreeEndGame_Radiobtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_drawable"
                    android:button="@null"
                    android:text="@string/habThreeEndGame" />

                <RadioButton
                    android:id="@+id/habNoneEndGame_Radiobtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_drawable"
                    android:button="@null"
                    android:text="@string/habNoneEndGame" />
            </RadioGroup>

            <TextView
                android:id="@+id/endGameDefenseText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/endGameDefenseHeading" />

            <RadioGroup
                android:id="@+id/endGameDefenseRadioQuestion"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/endGameDefenseAllMatch_chkbxText"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/endGameDefenseAllMatch_chkbxText" />

                <CheckBox
                    android:id="@+id/endGameDefenseAllMatch_chkbx"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" />

                <RadioButton
                    android:id="@+id/endGameDefenseEffective_Radiobtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_drawable"
                    android:button="@null"
                    android:text="@string/endGameDefenseEffective" />

                <RadioButton
                    android:id="@+id/endGameDefenseIneffective_Radiobtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_drawable"
                    android:button="@null"
                    android:text="@string/endGameDefenseIneffective" />
                <RadioButton
                    android:id="@+id/endGameDefenseNone_Radiobtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_drawable"
                    android:button="@null"
                    android:text="@string/endGameDefenseNone" />
            </RadioGroup>

            <TextView
                android:id="@+id/endGameFouls_chkbxText"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/endGameFoulsChkbxText" />

            <CheckBox
                android:id="@+id/endGameFouls_chkbx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />


            <Button
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:onClick="saveData"
                android:text="@string/saveButton" />


        </LinearLayout>

    </ScrollView>

</FrameLayout>